# imm-sim

./: Cargo.toml  flake.nix
client/: Cargo.toml
client/src/: connect.rs  input.rs  lib.rs  main.rs  state_mirroring.rs
client/src/camera/: mod.rs
client/src/physics/: mod.rs
client/src/player/: collision.rs  mod.rs
server/: Cargo.toml
server/src/: connection_handling.rs  input_handling.rs  lib.rs  main.rs  state_mirroring.rs
server/src/connection/: handle_incoming.rs  mod.rs  tracking.rs
server/src/physics/: mod.rs
server/src/player/: mod.rs
shared/: Cargo.toml
shared/src/: handshake.rs  lib.rs  ownership.rs
shared/src/actions/: mod.rs
shared/src/physics/components/: collision.rs  mod.rs  movement.rs  transform.rs
shared/src/player/: mod.rs
shared/src/player/components/: mod.rs
shared/src/player/messages/: client_input.rs  mod.rs  server_commands.rs
src/: actions.rs  main.rs
src/camera/: mod.rs
src/debug_environment/: mod.rs
src/physics/: mod.rs
src/player/: collision.rs  mod.rs
