[package]
name = "imm-sim-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
bevy_replicon = "0.29"
serde = { version = "1", features = ["derive"] }

[dependencies.avian3d]
version = "0.2"
default-features = false
features = [
  "3d",
  "f32",
  "default-collider",
  "parry-f32",
  "bevy_scene",
  "enhanced-determinism",
  "parallel",
  "serialize",
]
